--- a/index.html
+++ b/index.html
@@ -572,12 +572,12 @@
                     <div class="col l-3 m-6 c-12">
                         <div class="footer__info footer__info--relative">
                             <h2 class="footer__heading">FACEBOOK</h2>
-                            <img src="https://scontent.fsgn5-2.fna.fbcdn.net/v/t39.30808-6/250711789_4733904473296629_6293578552782402282_n.jpg?stp=dst-jpg_p75x225&_nc_cat=105&ccb=1-7&_nc_sid=dd9801&_nc_ohc=p3jczqHRsbMAX-bGJHG&tn=GriuYWaxLLWprG0m&_nc_ht=scontent.fsgn5-2.fna&oh=00_AfBpj7JuD2kwgvEeq1zscY3Tv1lQPOy_q5y8PUJcdQZw2Q&oe=6386103B" alt="" class="footer__info-img-fb">
+                            <img src="https://scontent.fdad3-4.fna.fbcdn.net/v/t39.30808-6/311978652_10161713091011729_8457832338774311713_n.png?stp=dst-png_p206x206&_nc_cat=1&ccb=1-7&_nc_sid=dd9801&_nc_ohc=C6RbLqS1LSEAX9iTq-o&_nc_ht=scontent.fdad3-4.fna&oh=00_AfAVF19_2TzSzZqJ7sh9hipodllUISGDr1xBle2gCrA74Q&oe=638E5A94" alt="" class="footer__info-img-fb">
                             <div class="footer__meta">
-                                <img src="https://scontent.fhan5-8.fna.fbcdn.net/v/t39.30808-1/250187968_4733903676630042_5034480341001943257_n.png?stp=cp0_dst-png_p80x80&_nc_cat=107&ccb=1-7&_nc_sid=dbb9e7&_nc_ohc=IWkub2aULFkAX9_pXkj&_nc_ht=scontent.fhan5-8.fna&oh=00_AfDz6waS2rFy1zCcoLqF5d6ZaJ9RmOIOhoxLb6vUhfYI6Q&oe=63865E28" alt="" class="footer__meta-img">
+                                <img src="https://scontent.fhan2-4.fna.fbcdn.net/v/t1.6435-1/58978526_10158354585751729_7411073224387067904_n.png?stp=cp0_dst-png_p80x80&_nc_cat=1&ccb=1-7&_nc_sid=dbb9e7&_nc_ohc=NlwrBrbLoakAX9pblCs&tn=GR4KGdJXAtqMlGkI&_nc_ht=scontent.fhan2-4.fna&edm=ADwHzz8EAAAA&oh=00_AfCNNk71moGrn09rzBurh4ikeg_Sjsx1hAxZc94VbIsU-Q&oe=63B126A5" alt="" class="footer__meta-img">
                                <div class="footer__meta-description">
                                 <span class="footer__meta-name">
-                                    Meta
+                                    Facebook
                                     <i class="fa-solid fa-check"></i>
                                 </span>
                                 <span class="footer__meta-like">75.906.444 lượt thích</span>
